--- a/jupyter_notebooks/06 - Modeling and Evaluation - Predict Tenure.ipynb
+++ b/jupyter_notebooks/06 - Modeling and Evaluation - Predict Tenure.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0aStgWSO0E0E"
@@ -10,6 +11,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "1eLEkw5O0ECa"
@@ -36,6 +38,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9uWZXH9LwoQg"
@@ -45,6 +48,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -52,6 +56,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -71,6 +76,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -90,6 +96,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -107,6 +114,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "pXKlJFX0iuM5"
@@ -116,6 +124,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-mavJ8DibrcQ"
@@ -146,6 +155,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "krjAk78Tbyhv"
@@ -155,6 +165,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -216,6 +227,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "lDmjjF3tHuCU"
@@ -288,6 +300,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "LD6B3CuhiDMT"
@@ -317,6 +330,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-15-sWUST6XX"
@@ -326,6 +340,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "KTFXq-ieogBj"
@@ -364,6 +379,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "jGABtSoSLP9u"
@@ -385,6 +401,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "c7p56nXeoqWo"
@@ -406,6 +423,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "6pRUAeoG9lrZ"
@@ -415,6 +433,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "w2XCyOYkAYpZ"
@@ -452,6 +471,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "sBy8thxqAlrd"
@@ -473,6 +493,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "wtNJJpLEAzdP"
@@ -494,6 +515,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DWryh7BlA2df"
@@ -515,6 +537,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "7_jvnR4sZ8km"
@@ -535,6 +558,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DgWXlprwaAW-"
@@ -556,6 +580,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "I9uT2XmaKISR"
@@ -602,6 +627,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "QzNyQirSKJj6"
@@ -661,6 +687,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "tV-W5nYyBPdk"
@@ -682,6 +709,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "HZ9tjLxEIn3h"
@@ -691,6 +719,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -711,6 +740,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -769,6 +799,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5eaMf41ZBhBk"
@@ -817,6 +848,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "irUsq475Bn7N"
@@ -835,6 +867,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2LVF-KR_Bqum"
@@ -873,6 +906,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Jq8td65fJkKY"
@@ -894,6 +928,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "zQ_Xj5oGJkKZ"
@@ -915,6 +950,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "383vOhJZBwza"
@@ -924,6 +960,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "PrcbiQHlB9QT"
@@ -960,6 +997,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Jvt-IOmHB9QU"
@@ -981,6 +1019,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "TVUDzRSGB9QV"
@@ -1002,6 +1041,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "CgoLo5C8B9QW"
@@ -1023,6 +1063,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "bjY2MdBNB9QX"
@@ -1043,6 +1084,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-8HonhniB9QX"
@@ -1064,6 +1106,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "rKGmSgINCQwj"
@@ -1086,6 +1129,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "qpKz9qjRUOR0"
@@ -1095,6 +1139,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "g0yf7s9LVZFH"
@@ -1130,6 +1175,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "lkPaGZfiXexn"
@@ -1172,6 +1218,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "fW2lu54NCgOC"
@@ -1197,6 +1244,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "mVnTzZZBC73_"
@@ -1225,6 +1273,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "aTEEhpvRDF0a"
@@ -1234,6 +1283,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "PPNNBP-QDIkv"
@@ -1270,6 +1320,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "YDYHs3I1D89F"
@@ -1295,6 +1346,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "uqQfPBxfEQgf"
@@ -1316,6 +1368,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "uQWhAJtcDoSI"
@@ -1325,6 +1378,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "yyeaZbCFDxf4"
@@ -1356,6 +1410,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ZcqabQPpD_vX"
@@ -1381,6 +1436,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "RDne0BgoEaDz"
@@ -1402,6 +1458,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-bZ2Qu5JEhrp"
@@ -1424,6 +1481,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "qUyqeVjkEjn7"
@@ -1446,6 +1504,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "_YUeAvIsEo5v"
@@ -1467,6 +1526,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "aGc1W7wEM2GP"
@@ -1476,6 +1536,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "fHN_VRwZarUp"
@@ -1522,6 +1583,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "jiwI6U28UV4C"
@@ -1531,6 +1593,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "6sL9XamIDTG3"
@@ -1574,6 +1637,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "PyX8PsH-0z8z"
@@ -1592,6 +1656,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1623,6 +1688,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "mQ3u0TodDdOZ"
@@ -1632,6 +1698,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FE5va8Cr-CCy"
@@ -1644,6 +1711,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "sQR54xeCbIAH"
@@ -1666,6 +1734,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "1BqT1Kne54Fq"
@@ -1675,6 +1744,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1705,6 +1775,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "GpgS-AgU6IWx"
@@ -1733,6 +1804,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ohPWfCs2E_3G"
@@ -1757,6 +1829,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2fT_mdLWFJFz"
@@ -1766,6 +1839,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "RfKEBTyLeDtj"
@@ -1786,6 +1860,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9WaSA9jcecXr"
@@ -1806,6 +1881,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "_7jAkvlBeeQl"
@@ -1831,6 +1907,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "zEZYXLRQfvTL"
@@ -1855,6 +1932,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "OcgDvuLRfwsE"
@@ -1877,6 +1955,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "3TE6Xgvif1ek"
@@ -1898,6 +1977,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "oeB08Md3f60p"
@@ -1919,6 +1999,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "IN0aj0iv6q9P"
@@ -1959,6 +2040,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "h7fjgzReFYeM"
@@ -1982,6 +2064,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "GBtppR73G1Yx"
@@ -1991,6 +2074,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ShuJ5tYUC06o"
@@ -2026,6 +2110,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "4TvoMsi3DNw1"
@@ -2079,6 +2164,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "aVbS3OnRDYtJ"
@@ -2132,6 +2218,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "U-XpkYAPFncu"
@@ -2141,6 +2228,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "xLmFFWF6RGo6"
@@ -2172,6 +2260,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "LUCrXGvUFpeB"
@@ -2181,6 +2270,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "TFkAKp0eRMYM"
@@ -2212,6 +2302,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "tTJlYRC5Q2wJ"
@@ -2245,6 +2336,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Sh0SKfv_s-3V"
@@ -2254,6 +2346,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -2282,7 +2375,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12 (default, Sep 27 2022, 15:56:02) \n[GCC 9.4.0]"
+      "version": "3.9.6"
     },
     "orig_nbformat": 2,
     "vscode": {
